# pc-os

./: .buckconfig  .gitignore  .gitmodules  BUCK  Cargo.toml  Justfile  OVMF-pure-efi.fd  README.md  build.rs  flake.nix  hello.rs  rust-toolchain.toml  x86_64-pc_os.json
.cargo/: config  config.toml
api/: Makefile  syscall.c
api/include/kernel/: syscall.h
boot/: Cargo.toml
boot/src/: main.rs
init/: Cargo.toml
init/.cargo/: config.toml
init/src/: main.rs
initrd/: .gitignore  Makefile  hello.txt  init  init.c  initrd.tar  link.ld
kbuild/: Cargo.toml
kbuild/src/: args.rs  config.rs  main.rs
kernel/: Cargo.toml  build.rs
kernel-uapi/: BUCK  Cargo.toml  cbindgen.toml
kernel-uapi/include/: .gitignore
kernel-uapi/src/: lib.rs  syscall.rs
kernel/.cargo/: config
kernel/include/kernel/uapi/: uapi_syscall.h
kernel/src/: acpi.rs  boot.rs  gdt.rs  init.rs  interrupts.rs  lib.rs  log.rs  main.rs  memory.rs  panic.rs  serial.rs  test.rs  util.rs
kernel/src/allocator/: bump.rs  fixed_size_block_allocator.rs  linked_list.rs  mod.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: context.rs  gdt.rs  interrupts.rs  mod.rs  syscall.rs
kernel/src/arch/x86_64/boot/: bootloader.rs  limine.rs  phil_opp_bootloader.rs
kernel/src/arch/x86_64/cpu/: apic.rs  context.rs  mod.rs  registers.rs
kernel/src/arch/x86_64/interrupts/: mod.rs  registers.rs
kernel/src/arch/x86_64/memory/: frame_allocator.rs  mmap.rs  mod.rs  space.rs
kernel/src/arch/x86_64/memory/frame_allocator/: buddy.rs  mmap.rs
kernel/src/arch/x86_64/syscall/: mod.rs  syscall.s
kernel/src/file/: mod.rs  ustar.rs
kernel/src/panic/: unwind.rs
kernel/src/pci/: mod.rs
kernel/src/process/: exec.rs  executor.rs  mod.rs
kernel/src/syscall/: dispatch.rs  mod.rs  syscall_impl.rs  syscalls.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs  timer.rs
kernel/src/video/: console.rs  framebuffer.rs  mod.rs  vesa.rs  vga.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  logger.rs  should_panic.rs  stack_overflow.rs
libc/: Makefile  syscall.c  syscall.h
libc/include/: stdlib.h  string.h
libc/include/sys/: putchar.h  sleep.h
libc/stdlib/: abort.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
libc/sys/: ping.c  putchar.c  sleep.c
libkernel/src/: lib.rs
libstd/: Cargo.toml
libstd/.cargo/: config.toml
libstd/src/: lib.rs
runner/: Cargo.toml  limine.cfg
runner/src/: main.rs
src/: acpi.rs  gdt.rs  init.rs  interrupts.rs  lib.rs  log.rs  main.rs  memory.rs
src/allocator/: fixed_size_block_allocator.rs  linked_list.rs  mod.rs
src/file/: ustar.rs
src/process/: executor.rs  mod.rs  process.rs  registers.rs
src/syscall/: mod.rs  syscall.s
src/task/: executor.rs  keyboard.rs  simple_executor.rs  timer.rs
src/video/: font.rs  mod.rs  vesa.rs  vga.rs
tests/: heap_allocation.rs  logger.rs
