# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = ["kernel", "kernel-uapi", "libstd", "init"]

# Force dev profile to be identical to release for the uapi
[profile.dev.package.kernel-uapi]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
