[package]
name = "kernel"
version = "0.1.0"
authors = ["tetra <bengdahl341@gmail.com>"]
edition = "2021"
build = "build.rs"

[package.metadata.bootloader]
map-page-table-recursively = true
minimum-framebuffer-height = 600
modules = [{ name = "initrd", path = "../initrd/initrd.tar" }]
map-physical-memory = true
physical-memory-offset = 0x0000_4000_0000_0000

[dependencies]
bootloader = { git = "https://github.com/tetrahedron341/bootloader" }
volatile = "0.2.6"
lazy_static = { version = "*", features = ["spin_no_std"] }
spin = "0.9"
x86_64 = "0.14.6"
uart_16550 = "0.2.10"
pic8259 = "0.10"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9"
conquer-once = { version = "0.2.0", default-features = false }
crossbeam-queue = { version = "0.2.1", default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3.4", default-features = false, features = [
    "alloc",
] }
log = { version = "0.4", default-features = false }
goblin = { version = "0.2.3", default-features = false, features = ["elf64"] }
acpi = "4.0.0"
core2 = { version = "0.3.2", default-features = false, features = [
    "alloc",
    "nightly",
] }

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[build-dependencies]
bindgen = "0.59.1"
