[package]
name = "kernel"
version = "0.1.0"
authors = ["tetra <bengdahl341@gmail.com>"]
edition = "2021"

[package.metadata.bootloader]
physical-memory-offset = 0x0000_F000_0000_0000 # 0xFFFF_F000_0000_0000
minimum-framebuffer-height = 900
map-physical-memory = true
aslr = true
dynamic-range-start = 0x0000_8000_0000_0000    # 0xFFFF_8000_0000_0000
dynamic-range-end = 0x0000_DFFF_FFFF_F000      # 0xFFFF_DFFF_FFFF_F000

[dependencies]
bootloader = { git = "https://github.com/rust-osdev/bootloader", rev = "ac46d0455b41c11e5d316348d068df1c495ce0af", optional = true }
kernel-uapi = { path = "../kernel-uapi", default-features = false }
volatile = "0.2.6"
lazy_static = { version = "*", features = ["spin_no_std"] }
spin = "0.9"
uart_16550 = "0.2.10"
pic8259 = "0.10"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9"
conquer-once = { version = "0.2.0", default-features = false }
crossbeam-queue = { version = "0.2.1", default-features = false, features = [
  "alloc",
] }
futures-util = { version = "0.3.4", default-features = false, features = [
  "alloc",
] }
log = { version = "0.4", default-features = false }
goblin = { version = "0.2.3", default-features = false, features = ["elf64"] }
acpi = "4.0.0"
core2 = { version = "0.3.2", default-features = false, features = [
  "alloc",
  "nightly",
] }
cfg-if = "1.0.0"
limine = { git = "https://github.com/limine-bootloader/limine-rs", rev = "83c7e72b82ced03f436f022138e7461cc4818a9d", optional = true }
plain = "0.2.3"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
rustc-demangle = { version = "0.1.23", default-features = false }
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.6"

[features]
default = ["limine_bootloader"]
phil_opp_bootloader = ["bootloader"]
limine_bootloader = ["limine"]

[[bin]]
name = "main"
test = false

[[test]]
name = "should_panic"

[[test]]
name = "stack_overflow"

[[test]]
name = "logger"

[[test]]
name = "basic_boot"

[[test]]
name = "heap_allocation"
